[package]
name = "axum_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
aws-config = "0.56.0"
aws-sdk-dynamodb = "0.29.0"
